# Klub

./: .env.production  .gitignore  Dockerfile  Procfile  README.md  docker-compose.yml  manage.py  nohup.out  pyproject.toml  requirements.txt
analytics/: urls.py
appointments/: filters.py  models.py  serializers.py  urls.py  views.py
appointments/migrations/: 0001_initial.py
branch/: admin.py  apps.py  models.py  permission.py  permissions.py  serializers.py  urls.py  views.py
branch/migrations/: 0001_initial.py  0002_add_phone_field.py  0002_branch_photo_service.py  0002_initial.py  0003_branch_email_branch_is_active_alter_branch_director_and_more.py  0003_branch_latitude_branch_longitude.py
data_analytics/: apps.py  models.py  permissions.py  serializers.py  views.py
list_doctor/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
list_doctor/migrations/: 0001_initial.py
listdoctors/: apps.py  models.py  serializers.py  urls.py  views.py
listdoctors/migrations/: 0001_initial.py  0002_doctor_photo.py  (+1 more)
listpatients/: apps.py  models.py  permissions.py  serializers.py  urls.py  views.py
main/: admin.py  apps.py  authentication.py  create_admin.py  forms.py  models.py  permissions.py  serializers.py  signals.py  urls.py  utils.py  views.py
safe/: asgi.py  custom_exception_handler.py  settings.py  urls.py  wsgi.py
services/: admin.py  models.py  permissions.py  serializers.py  urls.py  views.py
smsapp/: serializers.py  urls.py  views.py
staticfiles/: staticfiles.json
userprofile/: admin.py  models.py  serializers.py  views.py
(+25 files in other folders)
